--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
 		 integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 		 crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="index.css">
     <title></title>
   </head>
   <body>
+    <div id="highlightBoroughs">
+    </div>
     <ul id="borough"></ul>
   <script type="text/javascript" src='index.js'></script>
   </body>
